backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventrack-backend
  namespace: inventrack-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventrack-backend
  template:
    metadata:
      labels:
        app: inventrack-backend
    spec:
      containers:
        - name: backend
          image: inventrack-backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4000
          volumeMounts:
            - name: uploads-data
              mountPath: /app/uploads
      volumes:
        - name: uploads-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: inventrack-backend
  namespace: inventrack-prod
spec:
  selector:
    app: inventrack-backend
  ports:
    - port: 4000
      targetPort: 4000
  type: ClusterIP
