frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventrack-frontend
  namespace: inventrack-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventrack-frontend
  template:
    metadata:
      labels:
        app: inventrack-frontend
    spec:
      containers:
        - name: frontend
          image: inventrack-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: inventrack-frontend
  namespace: inventrack-prod
spec:
  selector:
    app: inventrack-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
